# keyed-launcher

./: .eslintrc.json  .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md
.github/workflows/: build.yml  coverage.yml  debug.yml  release.yml  sdk-release.yml
docs/: icon-system.md  implementation-plan.md  phase2-implementation-plan.md  plugin-development-guide.md  plugin-system-design.md  plugin-system-future-ideas.md  plugin-system-roadmap.md  project-overview.md  theme-system-design.md  view-plugin-implementation-plan.md
docs/plugins/: plugin-implementation-overview.md  plugin-implementation-phase1-foundation.md  plugin-implementation-phase2-core.md  plugin-implementation-phase3-advanced.md  plugin-implementation-plan.md
prompts/: 1-initial.md  2-project-setup.md
src/: App.test.tsx  App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  macos_apps.rs  plugins.rs  shortcuts.rs  theme_watcher.rs  vibrancy.rs  window.rs
src/components/: ActionBar.tsx  AppContainer.tsx  CategoryHeader.tsx  ColorPaletteDebugger.tsx  CommandPalette.tsx  LauncherTransition.tsx  PerformanceDashboard.tsx  ResultItem.tsx  ResultsList.tsx  SearchBar.tsx  ThemeDebugger.tsx
src/components/__tests__/: CommandPalette.test.tsx  PerformanceDashboard.test.tsx  ResultItem.test.tsx  ResultsList.test.tsx  SearchBar.test.tsx
src/components/__tests__/__snapshots__/: ActionBar.test.tsx.snap
src/hooks/: useCommandPaletteResults.ts  usePerformanceMonitoringStartup.ts
src/plugins/: bundled.ts  commands.ts  init.ts  loader.ts  manifest.ts  types.ts  utils.ts  validation.ts
src/plugins/__tests__/: manifest.test.ts
src/plugins/actions/: index.ts
src/plugins/api/: environment.ts  index.ts  shell.ts  system.ts
src/plugins/bundled/app-launcher/: index.ts  manifest.json
src/plugins/bundled/volume-control/: index.ts
src/plugins/bundled/volume-control/commands/: volume-down.ts  volume-set-0.ts  volume-set-100.ts  volume-set-25.ts  volume-set-50.ts
src/plugins/commands/: index.ts
src/plugins/components/: index.tsx
src/stores/: commands.ts  launcher.ts  plugins.ts
src/stores/__tests__/: plugins.test.ts
src/test/: mockPluginBuilder.ts
src/themes/: nord.json  raycast-inspired.json
src/theming/: ThemeProvider.tsx  colorUtils.ts  types.ts
src/utils/: performance.ts
