[package]
name = "app"
version = "0.1.0"
description = "High-performance multiplatform launcher built with Tauri"
authors = ["Based Launcher Team"]
license = "MIT"
repository = "https://github.com/nukeop/keyed-launcher"
edition = "2021"
rust-version = "1.77.2"

# Performance optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.0", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tokio = { version = "1.0", features = ["full"] }
