[package]
name = "app"
version = "1.0.2"
description = "High-performance multiplatform launcher built with Tauri"
authors = ["nukeop <12746779+nukeop@users.noreply.github.com>"]
license = "AGPL-3.0"
repository = "https://github.com/nukeop/keyed-launcher"
edition = "2021"
rust-version = "1.77.2"

# Performance optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.0", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
window-vibrancy = "0.5"
sysinfo = "0.30"
tokio = { version = "1.0", features = ["full"] }
notify = "6.1"
tauri-plugin-fs = "2"
plist = "1.6"
icns = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
rayon = "1.10"
